fix(vite-plugin-angular): fix Angular v18/v19 support for ɵPendingTasks

--- a/package.json
+++ b/package.json
@@ -41,17 +41,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.0.0",
-    "@angular/cdk": "^19.0.0",
-    "@angular/common": "^19.0.0",
-    "@angular/compiler": "^19.0.0",
-    "@angular/core": "^19.0.0",
-    "@angular/forms": "^19.0.0",
-    "@angular/material": "^19.0.0",
-    "@angular/platform-browser": "^19.0.0",
-    "@angular/platform-browser-dynamic": "^19.0.0",
-    "@angular/platform-server": "^19.0.0",
-    "@angular/router": "^19.0.0",
+    "@angular/animations": "19.0.4",
+    "@angular/cdk": "19.0.3",
+    "@angular/common": "19.0.4",
+    "@angular/compiler": "19.0.4",
+    "@angular/core": "19.0.4",
+    "@angular/forms": "19.0.4",
+    "@angular/material": "19.0.3",
+    "@angular/platform-browser": "19.0.4",
+    "@angular/platform-browser-dynamic": "19.0.4",
+    "@angular/platform-server": "19.0.4",
+    "@angular/router": "19.0.4",
     "@astrojs/mdx": "^3.0.1",
     "@astrojs/react": "^3.0.0",
     "@babel/core": "^7.21.8",
@@ -80,17 +80,17 @@
     "zone.js": "^0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1900.0",
-    "@angular-devkit/build-angular": "^19.0.0",
-    "@angular-devkit/core": "^19.0.0",
-    "@angular-devkit/schematics": "^19.0.0",
+    "@angular-devkit/architect": "0.1900.5",
+    "@angular-devkit/build-angular": "19.0.5",
+    "@angular-devkit/core": "19.0.5",
+    "@angular-devkit/schematics": "19.0.5",
     "@angular-eslint/eslint-plugin": "18.3.1",
     "@angular-eslint/eslint-plugin-template": "18.3.1",
     "@angular-eslint/template-parser": "18.3.1",
-    "@angular/build": "^19.0.0",
-    "@angular/cli": "^19.0.0",
-    "@angular/compiler-cli": "^19.0.0",
-    "@angular/language-service": "^19.0.0",
+    "@angular/build": "19.0.5",
+    "@angular/cli": "19.0.5",
+    "@angular/compiler-cli": "19.0.4",
+    "@angular/language-service": "19.0.4",
     "@astrojs/markdown-component": "^1.0.5",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
