feat: upgrade to Vite 6.x
BREAKING CHANGE:

The base version of Vite is updated.

BEFORE:

Vite 5.x is the base version.

AFTER:

Vite 6.x is the base version.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - beta
       - main
+      - alpha
 
 permissions:
   contents: read # for checkout
@@ -41,4 +42,4 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           TAG="$(${{ github.ref_name == 'main' }} && echo 'latest' || echo '${{ github.ref_name }}')"
-          RELEASE_TAG=$TAG npx semantic-release
+          RELEASE_TAG=$TAG npx semantic-release --dry-run
