--- a/package.json
+++ b/package.json
@@ -175,6 +175,7 @@
     "vfile": "^6.0.3",
     "vite": "^5.4.0",
     "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-inspect": "~0.8",
     "vite-tsconfig-paths": "4.2.0",
     "vitefu": "^0.2.5",
     "vitest": "^2.0.0",
