test(nx-plugin): fix version checks for analog packages

--- a/packages/nx-plugin/tsconfig.lib.json
+++ b/packages/nx-plugin/tsconfig.lib.json
@@ -1,6 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "outDir": "../../dist/out-tsc",
     "declaration": true,
     "types": ["node"]
