feat: add support for Vite 6 and Vitest 3

--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -44,6 +44,11 @@
     "marked-shiki": "^1.1.0",
     "shiki": "^1.6.1"
   },
+  "overrides": {
+    "@nx/vite": {
+      "vite": "$vite"
+    }
+  },
   "peerDependenciesMeta": {
     "shiki": {
       "optional": true
