--- a/packages/router/project.json
+++ b/packages/router/project.json
@@ -26,7 +26,8 @@
       "executor": "@nx/eslint:lint"
     },
     "test": {
-      "executor": "@nx/vite:test"
+      "executor": "@nx/vite:test",
+      "dependsOn": ["^build"]
     },
     "version": {
       "executor": "@jscutlery/semver:version",
