--- a/packages/create-analog/template-latest/package.json
+++ b/packages/create-analog/template-latest/package.json
@@ -49,5 +49,11 @@
     "vite": "^6.0.0",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^3.0.0"
+  },
+  "overrides": {
+    "@nx/vite": {
+      "vite": "$vite",
+      "vitest": "$vitest"
+    }
   }
 }
