build: only build packages during release job

--- a/packages/platform/project.json
+++ b/packages/platform/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/platform/src",
   "projectType": "library",
-  "tags": [],
+  "tags": ["type:release"],
   "implicitDependencies": ["vite-plugin-angular", "vite-plugin-nitro"],
   "targets": {
     "build-package": {
