--- a/packages/vite-plugin-angular/project.json
+++ b/packages/vite-plugin-angular/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/vite-plugin-angular/src",
   "projectType": "library",
-  "tags": [],
+  "tags": ["type:release"],
   "targets": {
     "build": {
       "executor": "@nx/js:tsc",
