--- a/packages/content/project.json
+++ b/packages/content/project.json
@@ -4,7 +4,7 @@
   "projectType": "library",
   "sourceRoot": "packages/content/src",
   "prefix": "analogjs",
-  "tags": [],
+  "tags": ["type:release"],
   "targets": {
     "build": {
       "executor": "nx:run-commands",
