--- a/packages/router/project.json
+++ b/packages/router/project.json
@@ -4,7 +4,7 @@
   "projectType": "library",
   "sourceRoot": "packages/router/src",
   "prefix": "analogjs",
-  "tags": [],
+  "tags": ["type:release"],
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:ng-packagr",
