ci: install corepack 0.31.0 to fix installation issues

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version-file: .node-version
+      - run: npm install --global corepack@0.31.0
       - run: corepack enable
       - run: pnpm --version
       - name: Install dependencies
