--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version-file: .node-version
+      - run: npm install --global corepack@0.31.0
       - run: corepack enable
       - run: pnpm --version
       - uses: actions/setup-node@v3
@@ -48,6 +49,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version-file: .node-version
+      - run: npm install --global corepack@0.31.0
       - run: corepack enable
       - run: pnpm --version
       - uses: actions/setup-node@v3
@@ -86,6 +88,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version-file: .node-version
+      - run: npm install --global corepack@0.31.0
       - run: corepack enable
       - run: pnpm --version
       - uses: actions/setup-node@v3
@@ -106,6 +109,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version-file: .node-version
+      - run: npm install --global corepack@0.31.0          
       - run: corepack enable
       - run: pnpm --version
       - uses: actions/setup-node@v3
@@ -128,6 +132,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version-file: .node-version
+      - run: npm install --global corepack@0.31.0          
       - run: corepack enable
       - run: pnpm --version
       - uses: actions/setup-node@v3
