--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -33,6 +33,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-node@v3
+      - run: npm install --global corepack@0.31.0
       - run: corepack enable
       - run: npm --version
       - name: Create Analog Application
@@ -49,6 +50,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-node@v3
+      - run: npm install --global corepack@0.31.0
       - run: corepack enable
       - run: npm --version
       - name: Create Nx Workspace
@@ -66,6 +68,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-node@v3
+      - run: npm install --global corepack@0.31.0
       - run: corepack enable
       - run: npm --version
       - name: Create Angular App
