style: limit markdown files to 80 characters width

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,12 @@
   "singleQuote": true,
   "overrides": [
     {
+      "files": "*.md",
+      "options": {
+        "printWidth": 80
+      }
+    },
+    {
       "files": "*.analog",
       "options": {
         "parser": "angular"
