fix: fix profile URL in contributers file

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -701,7 +701,7 @@
       "login": "ajitzero",
       "name": "Ajit Panigrahi",
       "avatar_url": "https://avatars.githubusercontent.com/u/19947758?v=4",
-      "profile": "https://beta.ajitpanigrahi.com",
+      "profile": "https://ajitpanigrahi.com",
       "contributions": [
         "code"
       ]
