--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
         run: pnpm install --frozen-lockfile --prefer-offline
 
       - name: Validate
-        run: pnpm exec prettier --check .
+        run: pnpm run prettier:check
 
   build:
     runs-on: ubuntu-latest
