--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate",
     "prettify": "prettier --write .",
+    "prettier:check": "prettier --check .",
     "build:test": "nx build ng-app --skip-nx-cache"
   },
   "engines": {
@@ -156,7 +157,7 @@
     "postcss-import": "~15.1.0",
     "postcss-preset-env": "~8.0.1",
     "postcss-url": "~10.1.3",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.0",
     "prismjs": "^1.29.0",
     "prompts": "^2.4.2",
     "rimraf": "^6.0.1",
