--- a/apps/trpc-app/.eslintrc.json
+++ b/apps/trpc-app/.eslintrc.json
@@ -1,6 +1,10 @@
 {
   "extends": ["../../.eslintrc.json"],
-  "ignorePatterns": ["!**/*"],
+  "ignorePatterns": [
+    "!**/*",
+    "**/vite.config.*.timestamp*",
+    "**/vitest.config.*.timestamp*"
+  ],
   "overrides": [
     {
       "files": ["*.ts"],
@@ -25,12 +29,7 @@
             "style": "kebab-case"
           }
         ],
-        "@angular-eslint/no-host-metadata-property": [
-          "error",
-          {
-            "allowStatic": true
-          }
-        ]
+        "@angular-eslint/prefer-standalone": "off"
       }
     },
     {
