ci: add release test workflows triggers

--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -2,7 +2,7 @@ name: Release Test
 
 on:
   release: 
-    types: [published]
+    types: [released, prereleased]
   workflow_dispatch:
     inputs:
       analog_build_tag:
