fix(storybook-angular): only include explicit deps in package.json

--- a/packages/storybook-angular/package.json
+++ b/packages/storybook-angular/package.json
@@ -33,50 +33,13 @@
   },
   "main": "src/index.js",
   "dependencies": {
-    "@storybook/angular": ">=8.6.0",
-    "@storybook/builder-vite": ">=8.6.0",
-    "@storybook/components": ">=8.6.0",
-    "@storybook/global": "^5.0.0",
-    "@storybook/manager-api": ">=8.6.0",
-    "@storybook/preview-api": ">=8.6.0",
-    "@storybook/theming": ">=8.6.0",
-    "fd-package-json": "^1.2.0",
-    "find-up": "^5.0.0",
-    "semver": "^7.3.7",
-    "telejson": "^7.2.0",
-    "ts-dedent": "^2.0.0",
-    "util-deprecate": "^1.0.2"
+    "@storybook/angular": ">=8.6.0 || next",
+    "@storybook/builder-vite": ">=8.6.0 || next"
   },
   "peerDependencies": {
     "@analogjs/vite-plugin-angular": ">=1.12.0 < 2.0.0",
-    "@angular-devkit/architect": ">=0.1500.0 < 0.2000.0",
-    "@angular-devkit/build-angular": ">=15.0.0 < 20.0.0",
-    "@angular-devkit/core": ">=15.0.0 < 20.0.0",
-    "@angular/animations": ">=15.0.0 < 20.0.0",
-    "@angular/cli": ">=15.0.0 < 20.0.0",
-    "@angular/common": ">=15.0.0 < 20.0.0",
-    "@angular/compiler": ">=15.0.0 < 20.0.0",
-    "@angular/compiler-cli": ">=15.0.0 < 20.0.0",
-    "@angular/core": ">=15.0.0 < 20.0.0",
-    "@angular/forms": ">=15.0.0 < 20.0.0",
-    "@angular/platform-browser": ">=15.0.0 < 20.0.0",
-    "@angular/platform-browser-dynamic": ">=15.0.0 < 20.0.0",
-    "rxjs": "^6.0.0 || ^7.4.0",
-    "storybook": ">=8.6.0",
-    "typescript": "^5.0.0",
-    "vite": "*",
-    "zone.js": ">= 0.11.1 < 1.0.0"
-  },
-  "peerDependenciesMeta": {
-    "@angular/animations": {
-      "optional": true
-    },
-    "@angular/cli": {
-      "optional": true
-    },
-    "zone.js": {
-      "optional": true
-    }
+    "storybook": ">=8.6.0 || next",
+    "vite": "*"
   },
   "engines": {
     "node": ">=18.0.0"
