--- a/packages/storybook-angular/package.json
+++ b/packages/storybook-angular/package.json
@@ -33,10 +33,10 @@
   },
   "main": "src/index.js",
   "dependencies": {
-    "@storybook/angular": ">=8.6.0 || next",
-    "@storybook/builder-vite": ">=8.6.0 || next"
+    "@storybook/builder-vite": "latest || next"
   },
   "peerDependencies": {
+    "@storybook/angular": ">=8.6.0 || next",
     "@analogjs/vite-plugin-angular": ">=1.12.0 < 2.0.0",
     "storybook": ">=8.6.0 || next",
     "vite": "*"
