fix(storybook-angular): adjust vite peer dep

--- a/packages/storybook-angular/package.json
+++ b/packages/storybook-angular/package.json
@@ -39,7 +39,7 @@
     "@storybook/angular": ">=8.6.0 || next",
     "@analogjs/vite-plugin-angular": ">=1.12.0 < 2.0.0 || beta",
     "storybook": ">=8.6.0 || next",
-    "vite": "*"
+    "vite": "^5.0.0 || ^6.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
