--- a/packages/create-analog/template-supabase/package.json
+++ b/packages/create-analog/template-supabase/package.json
@@ -11,7 +11,10 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "db:push": "supabase db push",
+    "db:reset": "supabase db reset && npm run db:push && npm run db:seed",
+    "db:gen-types": "supabase gen types typescript --project-id <project-id> > src/lib/database.types.ts"
   },
   "private": true,
   "dependencies": {
@@ -47,6 +50,7 @@
     "@angular/cli": "^19.0.0",
     "@angular/compiler-cli": "^19.0.0",
     "jsdom": "^22.0.0",
+    "supabase": "^2.22.6",
     "typescript": "~5.8.0",
     "vite": "^6.0.0",
     "vite-tsconfig-paths": "^4.2.0",
