fix(vite-plugin-angular): allow the plugin to be imported with commonjs/require

--- a/packages/vite-plugin-angular/package.json
+++ b/packages/vite-plugin-angular/package.json
@@ -50,5 +50,16 @@
       "@analogjs/vitest-angular"
     ],
     "migrations": "./migrations/migration.json"
+  },
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "types": "./src/index.d.ts",
+      "import": "./src/index.js",
+      "require": "./src/index.js",
+      "default": "./src/index.js"
+    },
+    "./esbuild": "./esbuild.js",
+    "./setup-vitest": "./setup-vitest.js"
   }
 }
