--- a/packages/vite-plugin-angular/project.json
+++ b/packages/vite-plugin-angular/project.json
@@ -21,7 +21,7 @@
           "packages/vite-plugin-angular/esbuild.ts",
           "packages/vite-plugin-angular/setup-vitest.ts"
         ],
-        "generateExportsField": true
+        "generateExportsField": false
       }
     },
     "test": {
