chore: add storybook-angular option to github issue templates

--- a/.github/ISSUE_TEMPLATE/02-feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/02-feature-request.yml
@@ -23,6 +23,7 @@ body:
         - platform
         - trpc
         - astro-angular
+        - storybook-angular
         - Docs
         - Don't know / other
     validations:
