--- a/.github/ISSUE_TEMPLATE/01-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/01-bug-report.yml
@@ -32,6 +32,7 @@ body:
         - platform
         - trpc
         - astro-angular
+        - storybook-angular
         - Docs
         - Don't know / other
     validations:
