fix(storybook-angular): include preset as ESM for Windows support

--- a/packages/storybook-angular/package.json
+++ b/packages/storybook-angular/package.json
@@ -27,7 +27,7 @@
       "import": "./src/index.js",
       "require": "./src/index.js"
     },
-    "./preset": "./src/preset.js",
+    "./preset": "./preset.mjs",
     "./package.json": "./package.json",
     "./*": "./src/*"
   },
