--- a/package.json
+++ b/package.json
@@ -104,10 +104,12 @@
     "@nx/eslint-plugin": "21.0.3",
     "@nx/jest": "21.0.3",
     "@nx/js": "21.0.3",
+    "@nx/playwright": "21.0.3",
     "@nx/plugin": "21.0.3",
     "@nx/storybook": "21.0.3",
     "@nx/vite": "21.0.3",
     "@nx/web": "21.0.3",
+    "@playwright/test": "^1.36.0",
     "@schematics/angular": "19.2.5",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/exec": "^6.0.3",
@@ -129,6 +131,8 @@
     "@typescript-eslint/eslint-plugin": "7.4.0",
     "@typescript-eslint/parser": "7.4.0",
     "@typescript-eslint/utils": "^8.13.0",
+    "@vitest/coverage-v8": "^3.0.5",
+    "@vitest/ui": "^3.0.0",
     "all-contributors-cli": "^6.24.0",
     "astro": "4.8.7",
     "autoprefixer": "^10.4.19",
@@ -140,6 +144,7 @@
     "eslint": "8.57.0",
     "eslint-config-prettier": "10.1.5",
     "eslint-plugin-cypress": "3.5.0",
+    "eslint-plugin-playwright": "^1.6.2",
     "execa": "^7.1.1",
     "fast-glob": "^3.2.12",
     "fd-package-json": "^1.2.0",
@@ -154,7 +159,7 @@
     "jsonc-eslint-parser": "^2.1.0",
     "kolorist": "^1.6.0",
     "lint-staged": "^13.1.0",
-    "marked-mangle": "^1.1.7",
+    "marked-mangle": "^1.1.10",
     "marked-shiki": "^1.1.0",
     "minimist": "^1.2.7",
     "ng-packagr": "19.2.0",
