--- a/package.json
+++ b/package.json
@@ -43,17 +43,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "19.2.4",
-    "@angular/cdk": "19.2.7",
-    "@angular/common": "19.2.4",
-    "@angular/compiler": "19.2.4",
-    "@angular/core": "19.2.4",
-    "@angular/forms": "19.2.4",
-    "@angular/material": "19.2.7",
-    "@angular/platform-browser": "19.2.4",
-    "@angular/platform-browser-dynamic": "19.2.4",
-    "@angular/platform-server": "19.2.4",
-    "@angular/router": "19.2.4",
+    "@angular/animations": "20.0.0-rc.2",
+    "@angular/cdk": "20.0.0-rc.2",
+    "@angular/common": "20.0.0-rc.2",
+    "@angular/compiler": "20.0.0-rc.2",
+    "@angular/core": "20.0.0-rc.2",
+    "@angular/forms": "20.0.0-rc.2",
+    "@angular/material": "20.0.0-rc.2",
+    "@angular/platform-browser": "20.0.0-rc.2",
+    "@angular/platform-browser-dynamic": "20.0.0-rc.2",
+    "@angular/platform-server": "20.0.0-rc.2",
+    "@angular/router": "20.0.0-rc.2",
     "@astrojs/mdx": "^3.0.1",
     "@astrojs/react": "^3.0.0",
     "@babel/core": "^7.21.8",
@@ -84,17 +84,17 @@
     "zone.js": "^0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.1902.5",
-    "@angular-devkit/build-angular": "19.2.5",
-    "@angular-devkit/core": "19.2.5",
-    "@angular-devkit/schematics": "19.2.5",
+    "@angular-devkit/architect": "0.2000.0-rc.3",
+    "@angular-devkit/build-angular": "20.0.0-rc.3",
+    "@angular-devkit/core": "20.0.0-rc.3",
+    "@angular-devkit/schematics": "20.0.0-rc.3",
     "@angular-eslint/eslint-plugin": "19.3.0",
     "@angular-eslint/eslint-plugin-template": "19.3.0",
     "@angular-eslint/template-parser": "19.3.0",
-    "@angular/build": "19.2.5",
-    "@angular/cli": "~19.2.0",
-    "@angular/compiler-cli": "19.2.4",
-    "@angular/language-service": "19.2.4",
+    "@angular/build": "20.0.0-rc.3",
+    "@angular/cli": "20.0.0-rc.3",
+    "@angular/compiler-cli": "20.0.0-rc.2",
+    "@angular/language-service": "20.0.0-rc.2",
     "@astrojs/markdown-component": "^1.0.5",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
@@ -162,7 +162,7 @@
     "marked-mangle": "^1.1.10",
     "marked-shiki": "^1.1.0",
     "minimist": "^1.2.7",
-    "ng-packagr": "19.2.0",
+    "ng-packagr": "20.0.0-rc.1",
     "nitropack": "^2.11.0",
     "nx": "21.0.3",
     "playwright": "^1.49.1",
@@ -188,7 +188,7 @@
     "ts-jest": "29.1.0",
     "ts-morph": "^21.0.1",
     "ts-node": "10.9.1",
-    "typescript": "5.7.3",
+    "typescript": "~5.8.0",
     "vfile": "^6.0.3",
     "vite": "6.2.3",
     "vite-plugin-eslint": "^1.8.1",
@@ -198,5 +198,20 @@
     "vitest": "^3.0.5",
     "webpack-bundle-analyzer": "^4.7.0",
     "xmlbuilder2": "^3.0.2"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "cypress"
+    ],
+    "onlyBuiltDependencies": [
+      "@swc/core",
+      "core-js",
+      "core-js-pure",
+      "esbuild",
+      "lmdb",
+      "msgpackr-extract",
+      "nx",
+      "sharp"
+    ]
   }
 }
