--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -1,8 +1,11 @@
 name: Release Test
 
+permissions:
+  contents: read
+
 on:
   release:
-    types: [released, prereleased]
+    types: [published]
   workflow_dispatch:
     inputs:
       analog_build_tag:
