--- a/packages/create-analog/package.json
+++ b/packages/create-analog/package.json
@@ -13,6 +13,7 @@
     "template-angular-v16",
     "template-angular-v17",
     "template-angular-v18",
+    "template-angular-v19",
     "template-blog",
     "template-latest",
     "template-minimal",
