--- a/packages/create-analog/template-blog/.vscode/extensions.json
+++ b/packages/create-analog/template-blog/.vscode/extensions.json
@@ -1,4 +1,4 @@
 {
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=827846
-  "recommendations": ["angular.ng-template", "analogjs.vscode-analog"]
+  "recommendations": ["angular.ng-template", "analogjs.vscode-analog", "vitest.explorer"]
 }
