--- a/package.json
+++ b/package.json
@@ -43,23 +43,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "20.0.0-rc.2",
-    "@angular/cdk": "20.0.0-rc.2",
-    "@angular/common": "20.0.0-rc.2",
-    "@angular/compiler": "20.0.0-rc.2",
-    "@angular/core": "20.0.0-rc.2",
-    "@angular/forms": "20.0.0-rc.2",
-    "@angular/material": "20.0.0-rc.2",
-    "@angular/platform-browser": "20.0.0-rc.2",
-    "@angular/platform-browser-dynamic": "20.0.0-rc.2",
-    "@angular/platform-server": "20.0.0-rc.2",
-    "@angular/router": "20.0.0-rc.2",
+    "@angular/animations": "^20.0.0",
+    "@angular/cdk": "^20.0.0",
+    "@angular/common": "^20.0.0",
+    "@angular/compiler": "^20.0.0",
+    "@angular/core": "^20.0.0",
+    "@angular/forms": "^20.0.0",
+    "@angular/material": "^20.0.0",
+    "@angular/platform-browser": "^20.0.0",
+    "@angular/platform-browser-dynamic": "^20.0.0",
+    "@angular/platform-server": "^20.0.0",
+    "@angular/router": "^20.0.0",
     "@astrojs/mdx": "^3.0.1",
     "@astrojs/react": "^3.0.0",
     "@babel/core": "^7.21.8",
     "@mdx-js/react": "3.0.1",
-    "@nx/angular": "21.0.3",
-    "@nx/devkit": "21.0.3",
+    "@nx/angular": "21.1.3",
+    "@nx/devkit": "21.1.3",
     "@trpc/client": "^10.25.0",
     "@trpc/server": "^10.25.0",
     "ajv-formats": "^2.1.1",
@@ -84,31 +84,31 @@
     "zone.js": "^0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.2000.0-rc.3",
-    "@angular-devkit/build-angular": "20.0.0-rc.3",
-    "@angular-devkit/core": "20.0.0-rc.3",
-    "@angular-devkit/schematics": "20.0.0-rc.3",
+    "@angular-devkit/architect": "^0.2000.0",
+    "@angular-devkit/build-angular": "^20.0.0",
+    "@angular-devkit/core": "^20.0.0",
+    "@angular-devkit/schematics": "^20.0.0",
     "@angular-eslint/eslint-plugin": "19.3.0",
     "@angular-eslint/eslint-plugin-template": "19.3.0",
     "@angular-eslint/template-parser": "19.3.0",
-    "@angular/build": "20.0.0-rc.3",
-    "@angular/cli": "20.0.0-rc.3",
-    "@angular/compiler-cli": "20.0.0-rc.2",
-    "@angular/language-service": "20.0.0-rc.2",
+    "@angular/build": "^20.0.0",
+    "@angular/cli": "^20.0.0",
+    "@angular/compiler-cli": "^20.0.0",
+    "@angular/language-service": "^20.0.0",
     "@astrojs/markdown-component": "^1.0.5",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@netlify/functions": "^2.3.0",
-    "@nx/cypress": "21.0.3",
-    "@nx/eslint": "21.0.3",
-    "@nx/eslint-plugin": "21.0.3",
-    "@nx/jest": "21.0.3",
-    "@nx/js": "21.0.3",
-    "@nx/playwright": "21.0.3",
-    "@nx/plugin": "21.0.3",
-    "@nx/storybook": "21.0.3",
-    "@nx/vite": "21.0.3",
-    "@nx/web": "21.0.3",
+    "@nx/cypress": "21.1.3",
+    "@nx/eslint": "21.1.3",
+    "@nx/eslint-plugin": "21.1.3",
+    "@nx/jest": "21.1.3",
+    "@nx/js": "21.1.3",
+    "@nx/playwright": "21.1.3",
+    "@nx/plugin": "21.1.3",
+    "@nx/storybook": "21.1.3",
+    "@nx/vite": "21.1.3",
+    "@nx/web": "21.1.3",
     "@playwright/test": "^1.36.0",
     "@schematics/angular": "19.2.5",
     "@semantic-release/changelog": "^6.0.3",
@@ -162,9 +162,9 @@
     "marked-mangle": "^1.1.10",
     "marked-shiki": "^1.1.0",
     "minimist": "^1.2.7",
-    "ng-packagr": "20.0.0-rc.1",
+    "ng-packagr": "^20.0.0",
     "nitropack": "^2.11.0",
-    "nx": "21.0.3",
+    "nx": "21.1.3",
     "playwright": "^1.49.1",
     "postcss": "^8.4.21",
     "postcss-import": "~15.1.0",
@@ -190,12 +190,12 @@
     "ts-node": "10.9.1",
     "typescript": "~5.8.0",
     "vfile": "^6.0.3",
-    "vite": "6.2.3",
+    "vite": "6.3.5",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-inspect": "~0.8",
     "vite-tsconfig-paths": "4.2.0",
     "vitefu": "^1.0.0",
-    "vitest": "^3.0.5",
+    "vitest": "^3.2.0",
     "webpack-bundle-analyzer": "^4.7.0",
     "xmlbuilder2": "^3.0.2"
   },
