--- a/apps/analog-app/project.json
+++ b/apps/analog-app/project.json
@@ -66,7 +66,8 @@
     },
     "test": {
       "executor": "@nx/vite:test",
-      "outputs": ["{projectRoot}/coverage"]
+      "outputs": ["{projectRoot}/coverage"],
+      "dependsOn": ["^build"]
     }
   }
 }
