--- a/apps/ng-app/project.json
+++ b/apps/ng-app/project.json
@@ -57,7 +57,8 @@
       "outputs": ["{options.outputFile}"]
     },
     "test": {
-      "executor": "@nx/vite:test"
+      "executor": "@nx/vite:test",
+      "dependsOn": ["^build"]
     }
   }
 }
