--- a/package.json
+++ b/package.json
@@ -54,12 +54,13 @@
     "@angular/platform-browser-dynamic": "^20.0.0",
     "@angular/platform-server": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@angular/ssr": "~20.0.0",
     "@astrojs/mdx": "^3.0.1",
     "@astrojs/react": "^3.0.0",
     "@babel/core": "^7.21.8",
     "@mdx-js/react": "3.0.1",
-    "@nx/angular": "21.1.3",
-    "@nx/devkit": "21.1.3",
+    "@nx/angular": "21.2.1",
+    "@nx/devkit": "21.2.1",
     "@trpc/client": "^10.25.0",
     "@trpc/server": "^10.25.0",
     "ajv-formats": "^2.1.1",
@@ -88,33 +89,33 @@
     "@angular-devkit/build-angular": "^20.0.0",
     "@angular-devkit/core": "^20.0.0",
     "@angular-devkit/schematics": "^20.0.0",
-    "@angular-eslint/eslint-plugin": "19.3.0",
-    "@angular-eslint/eslint-plugin-template": "19.3.0",
-    "@angular-eslint/template-parser": "19.3.0",
+    "@angular-eslint/eslint-plugin": "20.1.1",
+    "@angular-eslint/eslint-plugin-template": "20.1.1",
+    "@angular-eslint/template-parser": "20.1.1",
     "@angular/build": "^20.0.0",
-    "@angular/cli": "^20.0.0",
+    "@angular/cli": "~20.0.0",
     "@angular/compiler-cli": "^20.0.0",
     "@angular/language-service": "^20.0.0",
     "@astrojs/markdown-component": "^1.0.5",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@netlify/functions": "^2.3.0",
-    "@nx/cypress": "21.1.3",
-    "@nx/eslint": "21.1.3",
-    "@nx/eslint-plugin": "21.1.3",
-    "@nx/jest": "21.1.3",
-    "@nx/js": "21.1.3",
-    "@nx/playwright": "21.1.3",
-    "@nx/plugin": "21.1.3",
-    "@nx/storybook": "21.1.3",
-    "@nx/vite": "21.1.3",
-    "@nx/web": "21.1.3",
+    "@nx/cypress": "21.2.1",
+    "@nx/eslint": "21.2.1",
+    "@nx/eslint-plugin": "21.2.1",
+    "@nx/jest": "21.2.1",
+    "@nx/js": "21.2.1",
+    "@nx/playwright": "21.2.1",
+    "@nx/plugin": "21.2.1",
+    "@nx/storybook": "21.2.1",
+    "@nx/vite": "21.2.1",
+    "@nx/web": "21.2.1",
     "@playwright/test": "^1.36.0",
     "@schematics/angular": "19.2.5",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@storybook/angular": "8.6.12",
+    "@storybook/angular": "9.0.9",
     "@storybook/builder-vite": "^8.6.12",
     "@swc-node/register": "1.9.2",
     "@swc/cli": "0.6.0",
@@ -164,7 +165,7 @@
     "minimist": "^1.2.7",
     "ng-packagr": "^20.0.0",
     "nitropack": "^2.11.0",
-    "nx": "21.1.3",
+    "nx": "21.2.1",
     "playwright": "^1.49.1",
     "postcss": "^8.4.21",
     "postcss-import": "~15.1.0",
@@ -182,7 +183,7 @@
     "sharp": "^0.33.5",
     "shiki": "^1.6.1",
     "start-server-and-test": "^1.15.4",
-    "storybook": "^8.4.6",
+    "storybook": "9.0.9",
     "tailwindcss": "^3.1.0",
     "ts-dedent": "^2.0.0",
     "ts-jest": "29.1.0",
