feat: add support for Vite 7.0

--- a/package.json
+++ b/package.json
@@ -56,9 +56,9 @@
     "@angular/router": "^20.0.0",
     "@angular/ssr": "~20.0.0",
     "@astrojs/mdx": "^3.0.1",
-    "@astrojs/react": "^3.0.0",
+    "@astrojs/react": "^4.3.0",
     "@babel/core": "^7.21.8",
-    "@mdx-js/react": "3.0.1",
+    "@mdx-js/react": "3.1.0",
     "@nx/angular": "21.2.1",
     "@nx/devkit": "21.2.1",
     "@trpc/client": "^10.25.0",
@@ -116,7 +116,7 @@
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@storybook/angular": "9.0.9",
-    "@storybook/builder-vite": "^8.6.12",
+    "@storybook/builder-vite": "9.0.9",
     "@swc-node/register": "1.9.2",
     "@swc/cli": "0.6.0",
     "@swc/core": "1.5.7",
@@ -125,7 +125,7 @@
     "@types/hast": "^3.0.3",
     "@types/jest": "29.5.14",
     "@types/marked": "^5.0.0",
-    "@types/node": "18.19.15",
+    "@types/node": "22.14.0",
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
@@ -191,9 +191,9 @@
     "ts-node": "10.9.1",
     "typescript": "~5.8.0",
     "vfile": "^6.0.3",
-    "vite": "6.3.5",
+    "vite": "7.0.0",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-inspect": "~0.8",
+    "vite-plugin-inspect": "11.2.0",
     "vite-tsconfig-paths": "4.2.0",
     "vitefu": "^1.0.0",
     "vitest": "^3.2.0",
