--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -42,7 +42,8 @@
     "marked-highlight": "^2.2.1",
     "marked-mangle": "^1.1.10",
     "marked-shiki": "^1.1.0",
-    "shiki": "^1.6.1"
+    "shiki": "^1.6.1",
+    "vite": "^5.0.0 || ^6.0.0 || ^7.0.0"
   },
   "overrides": {
     "@nx/vite": {
