fix(create-analog): add overrides for Vite 7 to templates

--- a/packages/create-analog/template-latest/package.json
+++ b/packages/create-analog/template-latest/package.json
@@ -49,5 +49,10 @@
     "vite": "^7.0.0",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^3.0.0"
+  },
+  "overrides": {
+    "@analogjs/platform": {
+      "vite": "$vite"
+    }
   }
 }
