--- a/packages/create-analog/template-blog/package.json
+++ b/packages/create-analog/template-blog/package.json
@@ -48,5 +48,10 @@
     "vite": "^7.0.0",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^3.0.0"
+  },
+  "overrides": {
+    "@analogjs/platform": {
+      "vite": "$vite"
+    }
   }
 }
