--- a/packages/storybook-angular/package.json
+++ b/packages/storybook-angular/package.json
@@ -33,12 +33,12 @@
   },
   "main": "src/index.js",
   "dependencies": {
-    "@storybook/builder-vite": ">=8.6.0 || next"
+    "@storybook/builder-vite": ">=8.6.0 || ^9.0.0 || next"
   },
   "peerDependencies": {
-    "@storybook/angular": ">=8.6.0 || next",
-    "@analogjs/vite-plugin-angular": ">=1.12.0 < 2.0.0 || beta",
-    "storybook": ">=8.6.0 || next",
+    "@storybook/angular": ">=8.6.0 || ^9.0.0 || next",
+    "@analogjs/vite-plugin-angular": "*",
+    "storybook": ">=8.6.0 || ^9.0.0 || next",
     "vite": "^5.0.0 || ^6.0.0 || ^7.0.0"
   },
   "engines": {
