--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,5 +42,13 @@
       "path": "nu",
       "args": ["--login"]
     }
+  },
+  "mcp.servers": {
+    "nx-mcp": {
+      "url": "http://localhost:9376/mcp"
+    },
+    "angular-mcp": {
+      "url": "http://localhost:4200/mcp"
+    }
   }
 }
