--- a/apps/docs-app/package.json
+++ b/apps/docs-app/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
-    "build": "docusaurus build && rm -rf ../../dist/apps/docs-app && mv build ../../dist/apps/docs-app",
+    "build": "docusaurus build && pnpx rimraf ../../dist/apps/docs-app && pnpx make-dir-cli ../../dist/apps && mv build ../../dist/apps/docs-app",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
@@ -13,7 +13,7 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
-    "build:analyze": "RSDOCTOR=true docusaurus build && rm -rf ../../dist/apps/docs-app && mv build ../../dist/apps/docs-app"
+    "build:analyze": "RSDOCTOR=true docusaurus build && pnpx rimraf ../../dist/apps/docs-app && pnpx make-dir-cli ../../dist/apps && mv build ../../dist/apps/docs-app"
   },
   "dependencies": {
     "@docusaurus/core": "3.8.1",
