fix: remove files unrelated to PR

--- a/apps/analog-app/.eslintrc.json
+++ b/apps/analog-app/.eslintrc.json
@@ -3,8 +3,7 @@
   "ignorePatterns": [
     "!**/*",
     "**/vite.config.*.timestamp*",
-    "**/vitest.config.*.timestamp*",
-    "storybook-static"
+    "**/vitest.config.*.timestamp*"
   ],
   "overrides": [
     {
