feat(storybook-angular): add support for Vitest addon

--- a/packages/storybook-angular/package.json
+++ b/packages/storybook-angular/package.json
@@ -29,7 +29,12 @@
     },
     "./preset": "./preset.mjs",
     "./package.json": "./package.json",
-    "./*": "./src/*"
+    "./*": "./src/*",
+    "./testing": {
+      "types": "./src/lib/testing.d.ts",
+      "import": "./src/lib/testing.js",
+      "require": "./src/lib/testing.js"
+    }
   },
   "main": "src/index.js",
   "dependencies": {
