--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "@semantic-release/git": "^10.0.1",
     "@storybook/addon-docs": "9.0.18",
     "@storybook/addon-links": "9.0.18",
+    "@storybook/addon-vitest": "9.0.18",
     "@storybook/angular": "9.0.18",
     "@storybook/builder-vite": "9.0.18",
     "@swc-node/register": "1.10.10",
