--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "eslint-plugin-playwright": "^1.8.3",
     "execa": "^9.6.0",
     "fast-glob": "^3.2.12",
+    "tinyglobby": "^0.2.14",
     "fd-package-json": "^2.0.0",
     "find-up": "^7.0.0",
     "fs-extra": "^11.1.1",
