build: switch to vite-rolldown with native plugins enabled

--- a/apps/trpc-app-e2e-playwright/project.json
+++ b/apps/trpc-app-e2e-playwright/project.json
@@ -6,6 +6,9 @@
   "tags": [],
   "implicitDependencies": ["trpc-app"],
   "targets": {
+    "build": {
+      "executor": "nx:noop"
+    },
     "vitest": {
       "executor": "@nx/vite:test"
     },
