--- a/libs/my-package/project.json
+++ b/libs/my-package/project.json
@@ -5,6 +5,7 @@
   "prefix": "lib",
   "projectType": "library",
   "tags": [],
+  "implicitDependencies": ["platform"],
   "targets": {
     "build": {
       "executor": "@nx/vite:build",
