--- a/packages/create-analog/template-blog/package.json
+++ b/packages/create-analog/template-blog/package.json
@@ -46,7 +46,7 @@
     "@angular/compiler-cli": "^19.0.0",
     "jsdom": "^22.0.0",
     "typescript": "~5.8.0",
-    "vite": "^7.0.0",
+    "vite": "npm:rolldown-vite@7.1.2",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^3.0.0"
   },
