--- a/package.json
+++ b/package.json
@@ -100,6 +100,8 @@
     "@commitlint/cli": "^17.8.1",
     "@commitlint/config-conventional": "^17.8.1",
     "@compodoc/compodoc": "^1.1.26",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "~9.33.0",
     "@netlify/functions": "^2.8.2",
     "@nx/cypress": "21.3.11",
     "@nx/eslint": "21.3.11",
@@ -132,9 +134,8 @@
     "@types/prismjs": "^1.26.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
-    "@typescript-eslint/eslint-plugin": "7.18.0",
-    "@typescript-eslint/parser": "7.18.0",
-    "@typescript-eslint/utils": "^8.13.0",
+    "@typescript-eslint/eslint-plugin": "^8.39.1",
+    "@typescript-eslint/utils": "^8.39.1",
     "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^3.0.0",
     "all-contributors-cli": "^6.24.0",
@@ -145,10 +146,10 @@
     "cpy-cli": "^5.0.0",
     "cypress": "14.5.3",
     "esbuild": "0.25.8",
-    "eslint": "8.57.1",
+    "eslint": "^9.33.0",
     "eslint-config-prettier": "10.1.8",
-    "eslint-plugin-cypress": "3.6.0",
-    "eslint-plugin-playwright": "^1.8.3",
+    "eslint-plugin-cypress": "5.1.1",
+    "eslint-plugin-playwright": "^2.2.2",
     "execa": "^9.6.0",
     "fast-glob": "^3.2.12",
     "fd-package-json": "^2.0.0",
@@ -194,6 +195,7 @@
     "ts-morph": "^26.0.0",
     "ts-node": "10.9.2",
     "typescript": "~5.8.3",
+    "typescript-eslint": "^8.39.1",
     "vfile": "^6.0.3",
     "vite": "7.0.0",
     "vite-plugin-eslint": "^1.8.1",
