--- a/apps/blog-app/tsconfig.json
+++ b/apps/blog-app/tsconfig.json
@@ -1,13 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es2022",
     "useDefineForClassFields": false,
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noImplicitReturns": true
   },
   "files": [],
   "include": [],
