--- a/packages/content-plugin/tsconfig.json
+++ b/packages/content-plugin/tsconfig.json
@@ -1,8 +1,6 @@
 {
   "extends": "../../tsconfig.base.json",
-  "compilerOptions": {
-    "module": "CommonJS"
-  },
+  "compilerOptions": {},
   "files": [],
   "include": [],
   "references": [
