--- a/apps/ng-app/tsconfig.json
+++ b/apps/ng-app/tsconfig.json
@@ -1,14 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es2022",
     "useDefineForClassFields": false,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noImplicitReturns": true
   },
   "files": [],
   "include": [],
