--- a/apps/trpc-app/tsconfig.json
+++ b/apps/trpc-app/tsconfig.json
@@ -15,13 +15,8 @@
     }
   ],
   "compilerOptions": {
-    "target": "es2020",
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noImplicitReturns": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
