--- a/packages/create-analog/template-blog/tsconfig.json
+++ b/packages/create-analog/template-blog/tsconfig.json
@@ -18,9 +18,16 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
+    "moduleDetection": "force",
+    "allowJs": true,
     "lib": ["ES2022", "dom"],
     "useDefineForClassFields": false,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "noUncheckedIndexedAccess": true,
+
+    // Some stricter flags (disabled by default)
+    "noUnusedLocals": false,
+    "noUnusedParameters": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
