--- a/packages/nx-plugin/tsconfig.json
+++ b/packages/nx-plugin/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "module": "commonjs"
+    "module": "ESNext",
+    "moduleResolution": "node"
   },
   "files": [],
   "include": [],
