fix: ci build issue around semver

--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "@types/prismjs": "^1.26.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
+    "@types/semver": "^7.7.0",
     "@typescript-eslint/eslint-plugin": "7.18.0",
     "@typescript-eslint/parser": "7.18.0",
     "@typescript-eslint/utils": "^8.13.0",
