feat: upgrade to h3 v2 and nitro v3

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Build
         run: pnpm build
       - name: Verify
-        run: more dist\apps\blog-app\analog\public\index.html
+        run: more dist\apps\blog-app\analog\public\index
 
   unit:
     runs-on: ubuntu-latest
