--- a/packages/content-plugin/package.json
+++ b/packages/content-plugin/package.json
@@ -2,5 +2,6 @@
   "name": "content-plugin",
   "version": "0.0.1",
   "main": "./src/index.js",
-  "type": "commonjs"
+  "type": "commonjs",
+  "dependencies": {}
 }
