--- a/package.json
+++ b/package.json
@@ -169,7 +169,7 @@
     "marked-shiki": "^1.1.0",
     "minimist": "^1.2.7",
     "ng-packagr": "20.1.0",
-    "nitropack": "^2.11.0",
+    "nitro": "npm:nitro-nightly@latest",
     "nx": "21.3.11",
     "playwright": "^1.49.1",
     "postcss": "^8.4.21",
@@ -196,16 +196,21 @@
     "ts-node": "10.9.2",
     "typescript": "~5.8.3",
     "vfile": "^6.0.3",
-    "vite": "7.0.0",
+    "vite": "7.0.6",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-inspect": "11.3.2",
     "vite-tsconfig-paths": "4.2.0",
     "vitefu": "^1.1.1",
     "vitest": "^3.2.4",
     "webpack-bundle-analyzer": "^4.7.0",
-    "xmlbuilder2": "^3.0.2"
+    "xmlbuilder2": "^3.0.2",
+    "jest-util": "~30.0.0"
   },
   "pnpm": {
+    "overrides": {
+      "h3": "2.0.0-beta.2",
+      "nitro": "npm:nitro-nightly@latest"
+    },
     "ignoredBuiltDependencies": [
       "cypress"
     ],
