fix: work in progress

--- a/packages/vite-plugin-nitro/tsconfig.json
+++ b/packages/vite-plugin-nitro/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "module": "es2020",
+    "moduleResolution": "bundler",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
