--- a/package.json
+++ b/package.json
@@ -203,8 +203,7 @@
     "vitefu": "^1.1.1",
     "vitest": "^3.2.4",
     "webpack-bundle-analyzer": "^4.7.0",
-    "xmlbuilder2": "^3.0.2",
-    "jest-util": "~30.0.0"
+    "xmlbuilder2": "^3.0.2"
   },
   "pnpm": {
     "overrides": {
