--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@trpc/client": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "ajv-formats": "^3.0.1",
+    "arktype": "^2.1.20",
     "defu": "^6.1.4",
     "destr": "^2.0.5",
     "front-matter": "^4.0.2",
@@ -77,7 +78,9 @@
     "react-dom": "^18.3.1",
     "rxjs": "7.8.2",
     "semver": "^7.7.2",
+    "schema-dts": "^1.1.5",
     "superjson": "^2.2.1",
+    "tinyglobby": "^0.2.14",
     "tslib": "^2.7.0",
     "ufo": "^1.5.4",
     "xhr2": "^0.2.1",
