--- a/apps/docs-app/project.json
+++ b/apps/docs-app/project.json
@@ -12,7 +12,8 @@
       "executor": "nx:run-commands",
       "options": {
         "cwd": "apps/docs-app",
-        "command": "docusaurus build && pnpx rimraf ../../dist/apps/docs-app && pnpx make-dir-cli ../../dist/apps && mv build ../../dist/apps/docs-app"
+        "command": "docusaurus build  --out-dir={args.out-dir}",
+        "out-dir": "../../dist/apps/docs-app"
       },
       "outputs": ["{workspaceRoot}/dist/apps/docs-app"]
     },
@@ -29,7 +30,7 @@
       "executor": "nx:run-commands",
       "options": {
         "cwd": "apps/docs-app",
-        "command": "docusaurus serve --config apps/docs-app/docusaurus.config.ts --dir dist/apps/docs-app"
+        "command": "docusaurus serve --config apps/docs-app/docusaurus.config.js --dir dist/apps/docs-app"
       },
       "dependsOn": ["build"]
     },
