refactor(platform): migrate to moduleResolution bundler for enhanced performance

--- a/packages/create-analog/template-minimal/tsconfig.json
+++ b/packages/create-analog/template-minimal/tsconfig.json
@@ -19,9 +19,12 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
+    "moduleDetection": "force",
+    "allowJs": true,
     "lib": ["ES2022", "dom"],
     "useDefineForClassFields": false,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "noUncheckedIndexedAccess": true,
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
