--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rxjs": "7.8.2",
-    "semver": "^7.5.1",
+    "semver": "^7.7.2",
     "superjson": "^2.2.1",
     "tslib": "^2.7.0",
     "ufo": "^1.5.4",
@@ -132,6 +132,7 @@
     "@types/prismjs": "^1.26.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
+    "@types/semver": "^7.7.0",
     "@typescript-eslint/eslint-plugin": "7.18.0",
     "@typescript-eslint/parser": "7.18.0",
     "@typescript-eslint/utils": "^8.13.0",
