--- a/packages/nx-plugin/package.json
+++ b/packages/nx-plugin/package.json
@@ -1,5 +1,11 @@
 {
   "name": "@analogjs/nx",
   "version": "0.0.1",
-  "main": "src/index.js"
+  "main": "src/index.js",
+  "dependencies": {
+    "semver": "^7.7.2"
+  },
+  "devDependencies": {
+    "@types/semver": "^7.7.0"
+  }
 }
