feat(platform): add Angular builders for Vite

--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -51,6 +51,15 @@
     }
   },
   "peerDependenciesMeta": {
+    "@nx/angular": {
+      "optional": true
+    },
+    "@nx/devkit": {
+      "optional": true
+    },
+    "@nx/vite": {
+      "optional": true
+    },
     "shiki": {
       "optional": true
     },
